Fix sidebar font size and spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,44 +27,48 @@
   border-radius: 20px;
   background-image: url(../assets/images/bg-sidebar-desktop.svg);
   background-size: cover;
-}
 
-ol {
-  list-style: none; 
-  list-style-position: decimal;
-  padding: 12% 5.6%;
-  font-size: 1rem;
-  color: white;
-}
+  ol {
+    list-style: none; 
+    list-style-position: decimal;
+    padding: 12% 5.6%;
+    font-size: 1rem;
+    color: white;
+  }
+  
+  ol li {
+    counter-increment: list-counter; 
+    position: relative; 
+    padding-bottom: 35px;
+    padding-left: 10px;
+    display: flex;
+  }
+  
+  ol li::before {
+    content: counter(list-counter); 
+    font-weight: bold; 
+    border: 1px solid white; 
+    border-radius: 50%; 
+    padding: 7px 12px 9px 12px; 
+    font-size: 1rem;
+    font-weight: 700;
+  }
+  
+  .step {
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+  }
+  
+  .step-description {
+    font-weight: 700;
+    padding-top: 3px;
+  }
 
-ol li {
-  counter-increment: list-counter; 
-  position: relative; 
-  padding-bottom: 15px;
-  padding-left: 10px;
-  display: flex;
-}
-
-ol li::before {
-  content: counter(list-counter); 
-  font-weight: bold; 
-  border: 1px solid white; 
-  border-radius: 50%; 
-  padding: 10px 17px 5px 16px; 
-  font-size: 1.25rem;
-  font-weight: 700;
-}
-
-.step {
-  display: flex;
-  flex-direction: column;
-  padding-left: 20px;
-}
-
-.step-description {
-  font-size: 1.25rem;
-  font-weight: 700;
-  padding-top: 3px;
+  .step-number {
+    font-weight: 400;
+    font-size: 0.8rem;
+  }
 }
 
 .form-section {
